# auto-forex-oanda-adaptor

./: AGENTS.md  README.md  pyproject.toml
src/oanda/: __init__.py  accounts.py  broker.py  config.py  constants.py  converters.py  domain.py  errors.py  gateway.py  mappers.py  models.py  payload.py  provider.py  responses.py  snapshots.py  source.py  transport.py  transport_codecs.py  transport_http.py
src/oanda/gateways/: __init__.py  clients.py
src/oanda/mappers/: __init__.py  account.py  instrument.py  market_data.py  order.py  order_analysis.py  position.py  trade.py  transaction.py
src/oanda/services/: __init__.py  broker.py  orders.py  policies.py  positions.py  protocols.py  trades.py  transactions.py
tests/: __init__.py  support.py  test_oanda_adaptor.py
tests/e2e/: __init__.py  conftest.py  test_accounts_live.py  test_broker_live_readonly.py  test_mutating_live_practice.py  test_provider_live.py  test_source_live.py
tests/integration/: __init__.py  fakes.py  test_accounts.py  test_broker.py  test_config.py  test_domain.py  test_errors.py  test_gateway.py  test_init.py  test_mappers.py  test_models.py  test_provider.py  test_source.py
tests/unit/: __init__.py  test_accounts.py  test_broker.py  test_config.py  test_domain.py  test_errors.py  test_gateway.py  test_init.py  test_mappers.py  test_models.py  test_provider.py  test_source.py
