[project]
name = "oanda"
version = "0.1.0"
description = "OANDA v20 adapter package for AutoForexV2."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "auto-forex-core",
    "pydantic-settings>=2.14.2",
    "pyyaml>=6.0.3",
    "tenacity>=9.1.4",
]

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
    "ty>=0.0.55",
]

[tool.ruff]
line-length = 100
src = ["src"]
target-version = "py314"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF", "UP"]

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
quote-style = "double"

[tool.ty.environment]
python-version = "3.14"

[tool.uv.sources]
auto-forex-core = { path = "../core" }
